tests/NormalTests/paczka1/fuzzy1/78967859.err
Error in line 3: AC4uV A712 91,29
Error in line 4: S166 S416 2X,4
Error in line 1: yk4 S416 19,9
Error in line 8: yk4 S287 42,9
Error in line 16: yk4 S166 16,7
Error in line 21: PKSpfj8 S166 89,6
Error in line 25: PKSpfj8 S416 11,4
Error in line 15: S166 S416 295,3
